...
                        app:ssr_helpMessage="@string/tooltip_saved_authorizations_message"
                        app:ssr_navMode="true" />

                    <!-- Default User and Password -->
                    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_tiny">

                        <com.google.android.material.textfield.TextInputLayout android:id="@+id/tilDefaultUser" android:layout_width="@dimen/match_constraint" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/margin_small" android:hint="@string/default_user" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/tilDefaultPassword" app:layout_c

                            <com.google.android.material.textfield.TextInputEditText android:id="@+id/etDefaultUser" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="text" android:imeOptions="flagNoExtractUi" android:maxWidth="@dimen/layout_settings_text_field_max_width" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout android:id="@+id/tilDefaultPassword" android:layout_width="@dimen/match_constraint" android:layout_height="wrap_content" android:hint="@string/default_password" app:endIconMode="password_toggle" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/iconHelpDefaultCredentials" app:layou

                            <com.google.android.material.textfield.TextInputEditText android:id="@+id/etDefaultPassword" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textPassword" android:imeOptions="flagNoExtractUi" android:maxWidth="@dimen/layout_settings_text_field_max_width" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <ImageButton android:id="@+id/iconHelpDefaultCredentials" android:layout_width="@dimen/settings_help_icon_size" android:layout_height="@dimen/settings_help_icon_size" android:layout_marginStart="@dimen/settings_help_icon_margin" android:background="?attr/selectableItemBackgroundBorderless" android:contentDescription="@string/cd_help_default_credentials" android:src="@drawab

                    </androidx.constraintlayout.widget.ConstraintLayout>
...
