...
        </com.google.android.material.tabs.TabLayout>

    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2 android:id="@+id/viewPager" android:layout_width="match_parent" android:layout_height="0dp" app:layout_constraintTop_toBottomOf="@id/toolbarContainer" app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout android:id="@+id/searchOverlay" android:layout_width="match_parent" android:layout_height="0dp" android:background="?attr/colorSurface" android:elevation="@dimen/elevation_player_overlay" android:orientation="vertical" android:padding="@dimen/settings_padding" android:visibility="gone" app:layout_constraintTop_toBottomOf="@id/toolbarContainer" app:layout_constraintBottom_toBottom

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">

            <EditText android:id="@+id/searchInput" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:hint="@string/settings_search_hint" android:imeOptions="actionSearch|flagNoExtractUi" android:inputType="text" android:maxLines="1" />

            <ImageButton android:id="@+id/searchCloseButton" android:layout_width="@dimen/button_height" android:layout_height="@dimen/button_height" android:background="?attr/selectableItemBackgroundBorderless" android:contentDescription="@string/settings_search_close" android:src="@drawable/ic_clear" app:tint="?attr/colorOnSurface" />
...
